--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,9 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home", icon: home}
+  - {file: "cv.pdf", title: "Curriculum Vitae"}
   - {file: "README.md", title: "About Me", icon: address-card}
+  - {url: "https://www.curseforge.com/members/chronos_sacaria/projects", title: "Minecraft Projects"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:pesce.aj@gmail.com"}
